--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -12,7 +12,7 @@
         <form>
             <ul class="form-style">
                 <li>
-                    <label>Expense Group<span class="required">*</span></label>&nbsp;<label>Detail<span class="required">*</span></label>
+                    <label>Expense Group</label>&nbsp;<label>Detail<span class="required">*</span></label>
                     <select id="cmbTypeWorking" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
                 </li>
                 <li>
