--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -475,13 +475,14 @@
                                                         <th colspan="2">Working Time</th>
                                                         <th rowspan="3">Break1</th>
                                                         <th rowspan="3">Break2</th>
-                                                        <th colspan="5">Number of Hours</th>
+                                                        <th colspan="6">Number of Hours</th>
                                                         <th rowspan="3" colspan="2"></th>
                                                     </tr>
                                                     <tr>
                                                         <th rowspan="2">From</th>
                                                         <th rowspan="2">To</th>
                                                         <th rowspan="2" class="thwrap">Total Hours</th>
+                                                        <th rowspan="2" class="thwrap">Normal Day</th>
                                                         <th colspan="4">Overtime</th>
                                                     </tr>
                                                     <tr>
@@ -552,6 +553,9 @@
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled/>
+                                                        </td>
+                                                        <td>
+                                                            <input id="txtNormalDay" type="text" value="" class="NormalDay text-size50 textcenter txtdisablerow" disabled />
                                                         </td>
                                                         <td>
                                                             <input id="txtManNormal" type="text" value="" class="ManNormal text-size90 textcenter txtdisablerow" disabled/>
@@ -632,6 +636,9 @@
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled/>
+                                                        </td>
+                                                        <td>
+                                                            <input id="txtNormalDay" type="text" value="" class="NormalDay text-size50 textcenter txtdisablerow" disabled />
                                                         </td>
                                                         <td>
                                                             <input id="txtManNormal" type="text" value="" class="ManNormal text-size90 textcenter txtdisablerow" disabled/>
