--- a/Alpha/AlphaMvc/Reports/RptBDC.rdlc
+++ b/Alpha/AlphaMvc/Reports/RptBDC.rdlc
@@ -85,7 +85,7 @@
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
         <Top>0.44342in</Top>
-        <Left>4.06529in</Left>
+        <Left>4.64029in</Left>
         <Height>0.22917in</Height>
         <Width>0.66667in</Width>
         <ZIndex>2</ZIndex>
@@ -181,7 +181,7 @@
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
         <Top>0.84512in</Top>
-        <Left>3.91945in</Left>
+        <Left>4.49445in</Left>
         <Height>0.22917in</Height>
         <Width>0.8125in</Width>
         <ZIndex>5</ZIndex>
@@ -245,7 +245,7 @@
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
         <Top>1.15453in</Top>
-        <Left>3.91945in</Left>
+        <Left>4.49445in</Left>
         <Height>0.22917in</Height>
         <Width>0.81251in</Width>
         <ZIndex>7</ZIndex>
@@ -277,7 +277,7 @@
         </Paragraphs>
         <rd:DefaultName>StartDate</rd:DefaultName>
         <Top>2.93251cm</Top>
-        <Left>12.19556cm</Left>
+        <Left>13.65606cm</Left>
         <Height>0.58209cm</Height>
         <Width>4.62176cm</Width>
         <ZIndex>8</ZIndex>
@@ -307,7 +307,7 @@
         </Paragraphs>
         <rd:DefaultName>JobNo</rd:DefaultName>
         <Top>1.12629cm</Top>
-        <Left>12.19556cm</Left>
+        <Left>13.65606cm</Left>
         <Height>0.58209cm</Height>
         <Width>4.62176cm</Width>
         <ZIndex>9</ZIndex>
@@ -448,7 +448,10 @@
               <Width>1.07125cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>7.25474cm</Width>
+              <Width>4.64686cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>4.08158cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.52807cm</Width>
@@ -529,8 +532,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <ColSpan>2</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Textbox94">
@@ -728,6 +733,36 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
+                    <Textbox Name="Description">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!Description.Value</Value>
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style />
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Description</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
                     <Textbox Name="UnitWeight">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -895,9 +930,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>5</ColSpan>
+                    <ColSpan>6</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -911,11 +947,15 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value />
-                              <Style />
+                              <Value>=Sum(Fields!Amount.Value, "dsBDCIncome")</Value>
+                              <Style>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Textbox107</rd:DefaultName>
@@ -969,9 +1009,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>5</ColSpan>
+                    <ColSpan>6</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -1043,9 +1084,10 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <ColSpan>5</ColSpan>
+                    <ColSpan>6</ColSpan>
                   </CellContents>
                 </TablixCell>
+                <TablixCell />
                 <TablixCell />
                 <TablixCell />
                 <TablixCell />
@@ -1097,6 +1139,7 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -1122,7 +1165,7 @@
         <Top>6.14574cm</Top>
         <Left>0.6352cm</Left>
         <Height>3cm</Height>
-        <Width>16.18212cm</Width>
+        <Width>17.65582cm</Width>
         <ZIndex>14</ZIndex>
         <Style>
           <Border>
@@ -1137,7 +1180,7 @@
               <Width>1.07125cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>7.25474cm</Width>
+              <Width>8.71524cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.52807cm</Width>
@@ -1658,7 +1701,7 @@
         <Top>10.09333cm</Top>
         <Left>0.6352cm</Left>
         <Height>1.8cm</Height>
-        <Width>16.18214cm</Width>
+        <Width>17.64264cm</Width>
         <ZIndex>15</ZIndex>
         <Style>
           <Border>
@@ -1742,7 +1785,7 @@
       </Border>
     </Style>
   </Body>
-  <Width>19.31732cm</Width>
+  <Width>19.90469cm</Width>
   <Page>
     <PageHeader>
       <Height>3.14854cm</Height>
@@ -1875,7 +1918,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.125in</Top>
-          <Left>3.53322in</Left>
+          <Left>4.10822in</Left>
           <Height>0.22917in</Height>
           <Width>0.95833in</Width>
           <Style>
@@ -1908,7 +1951,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.47292in</Top>
-          <Left>2.17905in</Left>
+          <Left>2.75405in</Left>
           <Height>0.22917in</Height>
           <Width>2.3125in</Width>
           <ZIndex>1</ZIndex>
@@ -1942,7 +1985,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.80417in</Top>
-          <Left>3.53322in</Left>
+          <Left>4.10822in</Left>
           <Height>0.22917in</Height>
           <Width>0.95833in</Width>
           <ZIndex>2</ZIndex>
@@ -1977,7 +2020,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.125in</Top>
-          <Left>5.70137in</Left>
+          <Left>6.27637in</Left>
           <Height>0.22917in</Height>
           <Width>0.92482in</Width>
           <ZIndex>3</ZIndex>
@@ -2017,7 +2060,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.45764in</Top>
-          <Left>5.70137in</Left>
+          <Left>6.27637in</Left>
           <Height>0.22917in</Height>
           <Width>0.92482in</Width>
           <ZIndex>4</ZIndex>
@@ -2055,7 +2098,7 @@
           </Paragraphs>
           <rd:DefaultName>Textbox1</rd:DefaultName>
           <Top>0.80417in</Top>
-          <Left>5.70137in</Left>
+          <Left>6.27637in</Left>
           <Height>0.22917in</Height>
           <Width>0.92482in</Width>
           <ZIndex>5</ZIndex>
@@ -2127,6 +2170,41 @@
       </ConnectionProperties>
       <rd:DataSourceID>a1171ec9-0290-491d-8873-f49ee8e26ee3</rd:DataSourceID>
     </DataSource>
+    <DataSource Name="dsBDCJobManpower1">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>e20bdddc-b0cb-47fb-9650-170b08876bea</rd:DataSourceID>
+    </DataSource>
+    <DataSource Name="dsBDCJobManpower2">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>2c0ab77a-e17a-476b-9195-649161a74c5e</rd:DataSourceID>
+    </DataSource>
+    <DataSource Name="dsBDCJobManpower3">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>cfbc5ed8-2ec2-481b-b7c5-ca537cc27784</rd:DataSourceID>
+    </DataSource>
+    <DataSource Name="dsBDCJobManpower4">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>2f684395-0975-4ffa-b5c6-d082c523c64e</rd:DataSourceID>
+    </DataSource>
+    <DataSource Name="dsBDCJobManpower5">
+      <ConnectionProperties>
+        <DataProvider>System.Data.DataSet</DataProvider>
+        <ConnectString>/* Local Connection */</ConnectString>
+      </ConnectionProperties>
+      <rd:DataSourceID>55ad2f82-7786-4ed3-a0d0-ac2b050d3c83</rd:DataSourceID>
+    </DataSource>
   </DataSources>
   <DataSets>
     <DataSet Name="dsBDC">
@@ -2183,6 +2261,10 @@
           <DataField>Detail</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
+        <Field Name="Description">
+          <DataField>Description</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
         <Field Name="IncomeType">
           <DataField>IncomeType</DataField>
           <rd:TypeName>System.Int32</rd:TypeName>
@@ -2227,6 +2309,10 @@
         <CommandText>/* Local Query */</CommandText>
       </Query>
       <Fields>
+        <Field Name="Ord">
+          <DataField>Ord</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
         <Field Name="Detail">
           <DataField>Detail</DataField>
           <rd:TypeName>System.String</rd:TypeName>
@@ -2250,6 +2336,10 @@
         <Field Name="Amount">
           <DataField>Amount</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="Remark">
+          <DataField>Remark</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
         <Field Name="RowNum">
           <DataField>RowNum</DataField>
