--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -13,7 +13,7 @@
             <ul class="form-style">
                 <li>
                     <label>Expense Group</label>&nbsp;<label>Detail<span class="required">*</span></label>
-                    <select id="cmbTypeWorking" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
+                    <select id="cmbExpenseGroup" class="field-divided text-floatleft text-size120" required></select>&nbsp;<input type="text" id="txtDetail" class="field-divided" placeholder="" />
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
